test/files/neg/t1701.scala
class A extends java.lang.Cloneable[String, Option, Int]
